rancher-desktop/pokemon-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon
  labels:
    app: pokemon
spec:
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: pokemon
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon
  labels:
    app: pokemon
spec:
  selector:
    matchLabels:
      app: pokemon
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pokemon
        tier: frontend
    spec:
      containers:
      - image: ffactory/pokemondemo:latest
        name: pokemon
        ports:
        - containerPort: 9090
          name: pokemon
        volumeMounts:
        - name: pokemon-persistent-storage
          mountPath: /var/www/html
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: pokemon-persistent-storage
        persistentVolumeClaim:
          claimName: pk-pv-claim
