rancher-desktop/pokemon-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: pokemon.192.168.1.13.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokemon
                port:
                  number: 80
